force-app/main/default/objects/Funnel_Configuration_Mapping__c/Funnel_Configuration_Mapping__c.object-meta.xml
<CustomObject>
    <description
  >This object is used to map to what places a scaleMatters Funnel Conversion Cycle into specific values tied to Created Rating, Rating, Funnel Group and more based on the relationship of the related Lead, Contact, Account or Opportunity.</description>
    <label>Funnel Configuration Mapping</label>
    <nameField>
        <label>Funnel Configuration Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funnel Configuration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>