force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Default_Created_Rating__c.field-meta.xml
<CustomField>
    <fullName>Default_Created_Rating__c</fullName>
    <description
  >Only used for Lead and Contact mapping. Used as a default option should the record not find a result to end up as Lead 0, Lead 1 or Lead 2.</description>
    <label>Default Created Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Created_Rating</valueSetName>
    </valueSet>
</CustomField>