force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Funnel_Display__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Display__c</fullName>
    <label>Funnel Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top of Funnel and Bottom of Funnel</fullName>
            </value>
            <value>
                <fullName>Bottom of Funnel Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>