force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Funnel_ID__c.field-meta.xml
<CustomField>
    <fullName>Funnel_ID__c</fullName>
    <description
  >Used the GUID for scaleMatters&apos; to run queries off of Funnel Group values.</description>
    <label>Funnel ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>