force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Has_Lead_2_Created_Rating__c.field-meta.xml
<CustomField>
    <fullName>Has_Lead_2_Created_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This funnel can have records created as Lead 2</description>
    <label>Has Lead 2 Created Rating</label>
    <type>Checkbox</type>
</CustomField>