force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Lead_1_SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>Lead_1_SOQL_Condition__c</fullName>
    <description>SOQL condition for this funnel to result in Lead 1</description>
    <label>Lead 1 - SOQL Condition</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>