force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/SOQL_Condition__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Condition__c</fullName>
    <label>SOQL Condition</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>