force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/SOQL_Order__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Order__c</fullName>
    <label>SOQL Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>