force-app/main/default/objects/Funnel_Configuration_Mapping__c/fields/Web_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Web_Sessions__c</fullName>
    <label>Web Sessions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>