force-app/main/default/objects/Funnel_Configuration_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>SOQL_Order__c</columns>
    <columns>SOQL_Condition__c</columns>
    <columns>Funnel_Display__c</columns>
    <columns>Web_Sessions__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>