force-app/main/default/objects/Funnel_Configuration_Mapping__c/listViews/Lead_Mapping.listView-meta.xml
<ListView>
    <fullName>Lead_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>SOQL_Order__c</columns>
    <columns>SOQL_Condition__c</columns>
    <columns>Default_Created_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Lead Mapping</label>
</ListView>