force-app/main/default/objects/Funnel_Configuration_Mapping__c/listViews/Opportunity_Mapping.listView-meta.xml
<ListView>
    <fullName>Opportunity_Mapping</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>SOQL_Order__c</columns>
    <columns>SOQL_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity Mapping</label>
</ListView>